--- a/spring-example-zipkin/pom.xml
+++ b/spring-example-zipkin/pom.xml
@@ -47,7 +47,12 @@
         </dependency>
         <dependency>
             <groupId>io.zipkin.brave</groupId>
-            <artifactId>brave-context-log4j2</artifactId>
+            <artifactId>brave-context-log4j12</artifactId>
+            <version>4.3.4</version>
+        </dependency>
+        <dependency>
+            <groupId>io.zipkin.brave</groupId>
+            <artifactId>brave-instrumentation-spring-web</artifactId>
             <version>4.3.4</version>
         </dependency>
         <dependency>
@@ -61,8 +66,11 @@
             <version>0.10.0</version>
         </dependency>
 
-
-
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.25</version>
+        </dependency>
     </dependencies>
 
     <build>
