--- a/spring-example-web/pom.xml
+++ b/spring-example-web/pom.xml
@@ -51,9 +51,24 @@
                     <path>/</path>
                     <port>8080</port>
                     <uriEncoding>UTF-8</uriEncoding>
+                    <!-- 远程部署 -->
+                    <!-- <url>http://localhost:8080/manager/text</url> -->
                     <server>tomcat7</server>
                 </configuration>
             </plugin>
+
+            <!--
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>tomcat-maven-plugin</artifactId>
+                <version>1.1</version>
+                <configuration>
+                    <url>http://localhost:8080/manager/text</url>
+                    <server>tomcat7</server>
+                    <ignorePackaging>true</ignorePackaging>
+                </configuration>
+            </plugin>
+            -->
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
