--- a/spring-example-routing-datasource/pom.xml
+++ b/spring-example-routing-datasource/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>spring-example-routing-data-source</artifactId>
+    <artifactId>spring-example-routing-datasource</artifactId>
     <version>0.0.1</version>
     <packaging>jar</packaging>
 
-    <name>routing-data-source</name>
+    <name>routing-datasource</name>
     <description>Example project for Spring</description>
 
     <properties>
