--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>spring-example-async</module>
         <module>spring-example-autoload-cache</module>
         <module>spring-example-bean-scope</module>
+		<module>spring-example-ioc</module>
         <module>spring-example-multi-transaction</module>
         <module>spring-example-quartz</module>
         <module>spring-example-routing-datasource</module>
