--- a/spring-example-zipkin/src/main/resources/log4j.properties
+++ b/spring-example-zipkin/src/main/resources/log4j.properties
@@ -1,5 +1,4 @@
 log4j.rootLogger=INFO, stdout
-log4j.logger.com.example.mapper=DEBUG
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %5.5p %5.5X{PID} [%25.25t] %60.60l : %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %5.5p %5.5X{PID} [%25.25t] [%16.16X{TRACE_ID}] %60.60l : %m%n
