--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>spring-example-bean-scope</module>
 		<module>spring-example-ioc</module>
 		<module>spring-example-job</module>
+        <module>spring-example-jooq</module>
         <module>spring-example-multi-transaction</module>
         <module>spring-example-quartz</module>
         <module>spring-example-routing-datasource</module>
