--- a/spring-example-job/src/main/resources/log4j.properties
+++ b/spring-example-job/src/main/resources/log4j.properties
@@ -1,4 +1,11 @@
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=info, stdout, job
+
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %5.5p [%15.15t] %40.40l : %m%n
+
+log4j.appender.job=org.apache.log4j.RollingFileAppender  
+log4j.appender.job.File=d:/logs-${JOB_NAME}.log
+log4j.appender.job.Append=true
+log4j.appender.job.layout=org.apache.log4j.PatternLayout
+log4j.appender.job.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %5.5p [%15.15t] %40.40l : %m%n
